Updated and improved html code for project 1

--- a/contact.html
+++ b/contact.html
@@ -8,47 +8,38 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Tyler Flanagan</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="#">Hobbies</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
-      <img src="images/mev2.jpeg" alt="Drawing of Jane Smith" class="profile-image">
+      <img src="images/mev2.jpeg" alt="We won it 6 times!" class="profile-image">
       <h1 class="tag name">Hello, I’m Tyler.</h1>
       <p class="tag location">My home is Cardiff, Wales.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
-        <h2>Background</h2>
-        <p>.</p>
-        <p></p>
+      <div class="contactcard">
+        <h2>Contact</h2>
+        <p>If you have any questions or inquiries about the style of the website or the information provided by the website, make sure to get in touch and reach out via email or telephone. </p>
+        <div class="contactdetails">
+         <p><strong>Email :</strong> <a href="mailto:tylerflanagan@example.com">tylerflanagan@example.com</a></p>
+         <p><strong>Telephone :</strong> <a href="tel:123-456-789">123-456-789</a></p>
+       </div>
       </div>
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I would like to be able to develop my skills in web design to the point in which they become second nature to me  :</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
-
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/tylerjay02" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/tyler-flanagan-843265234/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/Tylerjay02" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2021, Tyler Flanagan</p>
     </footer>
   </body>
   </html>
