--- a/hobbies.html
+++ b/hobbies.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Tyler Flanagan</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="#">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/mev2.jpeg" alt="We won it 6 times!" class="profile-image">
@@ -28,21 +28,21 @@
         <h2>Hobbies</h2>
         <p>My hobbies in my spare time consist of playing football, going for runs, playing video games, going to the gym, even helping around the house with things such as gardening and building furniture in my spare time.</p>
         <ul class="hobbies">
-          <li><img src="images/football.jpeg"></li>
-          <li><img src="images/running.jpeg"></li>
-          <li><img src="images/ps4.jpeg"></li>
-          <li><img src="images/gym.jpeg"></li>
-          <li><img src="images/gardening.jpeg"></li>
-          <li><img src="images/house.jpeg"></li>
+          <li><img src="images/football.jpeg" alt="A Football"></li>
+          <li><img src="images/running.jpeg" alt="A Person Running"></li>
+          <li><img src="images/ps4.jpeg" alt="A Playstation 4"></li>
+          <li><img src="images/gym.jpeg"  alt="A Indoor Gym"></li>
+          <li><img src="images/gardening.jpeg" alt="A Person Gardening"></li>
+          <li><img src="images/house.jpeg"  alt="A Nice House"></li>
         </ul>
         <p></p>
       </div>
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/tylerjay02" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/tyler-flanagan-843265234/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/Tylerjay02" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2021, Tyler Flanagan</p>
     </footer>
