--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Tyler Flanagan</li>
           <li><a href="#">Home</a></li>
-          <li><a href="experience.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/mev2.jpeg" alt="We won it 6 times!" class="profile-image">
       <h1 class="tag name">Hello, I’m Tyler.</h1>
       <p class="tag location">My home is Cardiff, Wales.</p>
     </header>
-
-    <main class="flex">
-      <div class="card">
+     <main class="flex">
+      <article class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who has an interest in how the internet works and functions and also very open to learn about the process of creating web pages. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I started learning web development in late 2017 via treehouse where I learned the basics of how to create websites via html and css code. I also went on work experience for two weeks for a web agency during my GCSE's to learn more about designing websites and be able to create them with more advanced pieces of code (html and css) compared to that learned from school.  </p>
-      </div>
+      </article>
 
-      <div class="card">
+      <article class="card">
         <h2>Goals</h2>
         <p>I would like to be able to develop my skills in web design to the point in which they become second nature to me so that I can be more productive with them. </p>
         <ul class="skills">
@@ -39,13 +38,13 @@
           <li>JavaScript</li>
         </ul>
         <p>All of these skills combined should set me up to work for a web agency where I can be able to efficiently use everything ive learned into use when developing websites in the future. As well as HTML and CSS, I would like to also learn other elements such as Javascript and PHP so that as well as working for a web designer I would also be interested in making my own sites if I ever need to do so. </p>
-      </div>
+      </article>
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/tylerjay02" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/tyler-flanagan-843265234/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/Tylerjay02" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2021, Tyler Flanagan</p>
     </footer>
